--- a/.github/workflows/contribution_graph.yml
+++ b/.github/workflows/contribution_graph.yml
@@ -28,4 +28,4 @@ jobs:
         git config --global user.email 'action@github.com'
         git add dist/*
         git commit -m "Updated contribution graph" || echo "No changes to commit"
-        git push https://${{ secrets.GH_PAT }}@github.com/SonOfLope/SonOfLope.git HEAD:main
+        git push https://${{ secrets.GH_PAT }}@github.com/ThomasCardin/ThomasCardin.git HEAD:main
